--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
       text-align: center; 
       font-family: Arial, Helvetica, sans-serif; 
       font-size: 50px;
+      z-index: 1;
     }
 
     .countdown {
       font-size: 100px;
+      z-index: 1;
     }
 
     .time {
       text-align: center;
       font-size: xx-large;
       white-space: pre;
+      z-index: 1;
+    }
+
+    img {
+      max-width: 100%; /* Image will not exceed the width of its parent container */
+      height: auto;    /* Height will adjust proportionally to maintain aspect ratio */
+      
     }
   </style>
 </head>
@@ -46,7 +55,7 @@
       console.log('window is in focus');
     });
 
-    setInterval(() => {
+    let intervalId = setInterval(() => {
       count++;
       document.querySelector('.count').innerHTML = count.toLocaleString();
 
@@ -56,6 +65,13 @@
       let seconds = count % 60;
 
       document.querySelector('.time').innerHTML = `Days: ${days}    Hours: ${hours}    Minutes: ${minutes}    Seconds: ${seconds}`;
+      
+      if (count >= 1000000) {
+            clearInterval(intervalId);
+            console.log("Interval stopped.");
+
+            document.querySelector('.time').innerHTML += `\n<img src="fireworks.jpg">`;
+        }
     }, 1000);
   </script>
 </body>
